disable mobile zoom on input field

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <link rel="icon" href="https://sampomerantz.me/favicon.ico" />
     <title>RobinClusters</title>
 
+      <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+
     <meta charset="utf-8" />
 
     <script src="lib/bindings/utils.js"></script>
