--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <center>
-      <h1></h1>
-    </center>
-
-    <!-- <link rel="stylesheet" href="../node_modules/vis/dist/vis.min.css" type="text/css" />
-<script type="text/javascript" src="../node_modules/vis/dist/vis.js"> </script>-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -71,9 +65,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <center>
-      <h1></h1>
-    </center>
     <style type="text/css">
       #mynetwork {
         width: 100%;
@@ -196,28 +187,18 @@
   </head>
 
   <body>
-    <div class="card" style="width: 100%; height: 100%">
+    <div>
       <div class="note">
         <form onSubmit="return false;" style="margin-bottom: 8px;">
         <input type="input" id="searchInput" class="searchBox"></input>
         <button onclick="focusOnNode()" value="submit" class="searchButton">Search</button>
       </form>
         <h3>
-          RobinClusters
-          <a
-            href="https://github.com/SamPom100/StockClustering/"target="_blank"
-            ><i class="fa fa-github" style="margin-right: 8px"></i
-          ></a>
+          RobinClusters<a href="https://github.com/SamPom100/StockClustering/"target="_blank"><i class="fa fa-github" style="margin-right: 8px"></i></a>
         </h3>
-
-        <h8
-          >Sam Pomerantz
-          <a href="https://www.linkedin.com/in/pomerantzsam/" target="_blank"
-            ><i
-              class="fab fa-linkedin"
-              style="margin-right: 8px; margin-left: 8px"
-            ></i></a
-        ></h8>
+        <h8>
+          Sam Pomerantz<a href="https://www.linkedin.com/in/pomerantzsam/" target="_blank"><i class="fab fa-linkedin" style="margin-right: 8px; margin-left: 8px"></i></a>
+        </h8>
       </div>
       <div id="mynetwork" class="card-body"></div>
     </div>
@@ -269,7 +250,7 @@
       function focusOnNode() {
         const nodeName = document.getElementById("searchInput").value;
         network.focus(nodeName.toUpperCase(), {
-          scale: 5,
+          scale: 2,
           animation: {
             locked: true,
             duration: 1000,
@@ -299,7 +280,7 @@
         for (nodeId in allNodes) {
           nodeColors[nodeId] = allNodes[nodeId].color;
         }
-        allEdges = edges.get({ returnType: "Object" });
+          allEdges = edges.get({ returnType: "Object" });
         data = { nodes: nodes, edges: edges };
 
         var options = {
@@ -320,15 +301,25 @@
             hideEdgesOnDrag: true,
             hideNodesOnDrag: false,
           },
-          physics: {
-            repulsion: {
-              damping: 0.5,
-            },
-            enabled: true,
-            stabilization: {
-              enabled: false,
-            },
+          "physics": {
+          "enabled": true,
+          "forceAtlas2Based": {
+              "avoidOverlap": 0,
+              "centralGravity": 0.01,
+              "damping": 0.4,
+              "gravitationalConstant": -50,
+              "springConstant": 0.08,
+              "springLength": 100
           },
+          "solver": "forceAtlas2Based",
+          "stabilization": {
+              "enabled": false,
+              "fit": true,
+              "iterations": 10,
+              "onlyDynamicEdges": false,
+              "updateInterval": 50
+          }
+        },
           layout: { improvedLayout: false },
           nodes: {
             shapeProperties: {
