--- a/index.html
+++ b/index.html
@@ -1,51 +1,22 @@
 <html>
   <head>
-    <meta
-      property="og:image"
-      content="https://user-images.githubusercontent.com/28206070/231355451-87d0c3d3-9846-4e4f-a4dd-9d4be668a2c2.png"
-    />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/28206070/231355451-87d0c3d3-9846-4e4f-a4dd-9d4be668a2c2.png"/>
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://sampom100.github.io/StockClustering/"
-    />
+    <meta property="og:url" content="https://sampom100.github.io/StockClustering/"/>
     <meta property="og:title" content="SamPom100 StockClustering" />
-    <meta
-      property="og:description"
-      content="Network of Robinhood-based Similar Stocks"
-    />
+    <meta property="og:description" content="Network of Robinhood-based Similar Stocks"/>
     <link rel="icon" href="https://sampomerantz.me/favicon.ico" />
     <title>RobinClusters</title>
-
     <meta charset="utf-8" />
-
     <script src="lib/bindings/utils.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.1.2/dist/dist/vis-network.min.css"
-      integrity="sha512-WgxfT5LWjfszlPHXRmBWHkV2eceiWTOBvrKCNbdgDYTHrT2AeLCGbF4sZlZw3UMN3WtL0tGUoIAKsu8mllg/XA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.1.2/dist/dist/vis-network.min.css" integrity="sha512-WgxfT5LWjfszlPHXRmBWHkV2eceiWTOBvrKCNbdgDYTHrT2AeLCGbF4sZlZw3UMN3WtL0tGUoIAKsu8mllg/XA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.1.2/dist/vis-network.min.js"
       integrity="sha512-LnvoEWDFrqGHlHmDD2101OrLcbsfkrzoSpvtSQtxK3RMnRV0eOkhhBN2dXHKRrUU8p2DGRTk35n4O8nWSVe1mQ=="
