try to prevent zoom

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         .searchBox {
           border: 2px solid #ebebeb;
           font-family: inherit;
-          font-size: 20px;
+          font-size: 1rem;
           padding: 10px 60px;
           border-radius: 1.25rem;
           transition: all 0.375s;
@@ -147,7 +147,7 @@
           background: var(black);
           color: black;
           font-weight: 500;
-          font-size: 20px;
+          font-size: 1rem;
           border: none;
           cursor: pointer;
           transition: all .3s ease;
