--- a/index.html
+++ b/index.html
@@ -41,16 +41,9 @@
         width: 100%;
         height: 100%;
         background-color: #222222;
-        border: 1px solid lightgray;
+        border: 0px solid rgb(34, 34, 34);
         position: relative;
         float: left;
-      }
-
-      body {
-        margin-top: -5%;
-        margin-left: -5%;
-        margin-right: -5%;
-        margin-bottom: -10%;
       }
 
       .note {
@@ -157,7 +150,7 @@
     </style>
   </head>
 
-  <body>
+  <body style="background-color: rgb(34, 34, 34);">
     <div>
       <div class="note">
         <form onSubmit="return false;" style="margin-bottom: 8px;">
@@ -171,7 +164,7 @@
           Sam Pomerantz<a href="https://www.linkedin.com/in/pomerantzsam/" target="_blank"><i class="fab fa-linkedin" style="margin-right: 8px; margin-left: 8px"></i></a>
         </h8>
       </div>
-      <div id="mynetwork" class="card-body"></div>
+      <div id="mynetwork" class="card-body" style="padding: 0px;"></div>
     </div>
 
     <script type="text/javascript">
