--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:image" content="https://user-images.githubusercontent.com/28206070/231355451-87d0c3d3-9846-4e4f-a4dd-9d4be668a2c2.png"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sampom100.github.io/StockClustering/"/>
@@ -37,6 +38,8 @@
     ></script>
 
     <style type="text/css">
+      
+
       #mynetwork {
         width: 100%;
         height: 100%;
