trying to disable iOS zoom

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
     </style>
   </head>
 
-  <body style="background-color: rgb(34, 34, 34);">
+  <body style="background-color: rgb(34, 34, 34); font-size: 16px;">
     <div>
       <div class="note">
-        <form onSubmit="return false;" style="margin-bottom: 8px;">
-        <input type="input" id="searchInput" class="searchBox"></input>
+        <form onSubmit="return false;" style="margin-bottom: 8px; font-size: 16px;">
+        <input type="input" id="searchInput" class="searchBox" style="font-size: 16px;"></input>
         <button onclick="focusOnNode()" value="submit" class="searchButton">Search</button>
       </form>
         <h3>
