git left margin

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta property="og:image" content="https://user-images.githubusercontent.com/28206070/231355451-87d0c3d3-9846-4e4f-a4dd-9d4be668a2c2.png"/>
+    <meta property="og:image" content="https://user-images.githubusercontent.com/28206070/231950065-4bc0fefc-984f-4ede-a45a-308d2a557a7f.png"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sampom100.github.io/StockClustering/"/>
     <meta property="og:title" content="SamPom100 StockClustering" />
@@ -156,7 +156,7 @@
     <div>
       <div class="note">
         <h3>
-          RobinClusters<a href="https://github.com/SamPom100/StockClustering/"target="_blank"><i class="fa fa-github" style="margin-right: 8px; margin-top: 15px;"></i></a>
+          RobinClusters<a href="https://github.com/SamPom100/StockClustering/"target="_blank"><i class="fa fa-github" style="margin-right: 8px; margin-left: 8px; margin-top: 15px;"></i></a>
         </h3>
         <h8>
           Sam Pomerantz<a href="https://www.linkedin.com/in/pomerantzsam/" target="_blank"><i class="fab fa-linkedin" style="margin-right: 8px; margin-left: 8px"></i></a>
